[package]
name = "flutter_photon_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "flutter_photon_rs"
# this is needed to build for iOS and Android.
crate-type = ["lib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flutter_rust_bridge = "1"
anyhow = { version = "1.0.56", features = ["backtrace"] }
photon-rs = { version = "^0.3.1", features = ["default", ] }
image = "0.24.1"
img-parts = "0.2.3"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"